feat: add timestamp to table name

--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [dependencies]
 arrow.workspace = true
+chrono.workspace = true
 clap = { version = "4.0", features = ["derive"] }
 client = { workspace = true }
 indicatif = "0.17.1"
