--- a/src/meta-srv/Cargo.toml
+++ b/src/meta-srv/Cargo.toml
@@ -59,6 +59,7 @@ uuid.workspace = true
 [dev-dependencies]
 chrono.workspace = true
 client = { workspace = true, features = ["testing"] }
+common-meta = { workspace = true, features = ["testing"] }
 common-procedure-test = { workspace = true }
 session = { workspace = true }
 tracing = "0.1"
