feat: add 'sqlness-cli' to run sqlness in blackbox mode

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,7 @@ linker = "aarch64-linux-gnu-gcc"
 
 [alias]
 sqlness = "run --bin sqlness-runner --"
-
+sqlness-cli = "run --bin sqlness-cli --"
 
 [build]
 rustflags = [
