--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 
 [features]
 default = []
-test = ["common-test-util"]
+test = ["common-test-util", "log-store"]
 
 [dependencies]
 anymap = "1.0.0-beta.2"
@@ -39,6 +39,7 @@ datatypes = { workspace = true }
 futures.workspace = true
 humantime-serde = { workspace = true }
 lazy_static = "1.4"
+log-store = { workspace = true, optional = true }
 memcomparable = "0.2"
 moka = { workspace = true, features = ["sync"] }
 object-store = { workspace = true }
