--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -12,10 +12,16 @@ common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
+common-telemetry.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
-mito2 = { workspace = true, features = ["test"] }
+mito2.workspace = true
 object-store.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
+tokio.workspace = true
+
+[dev-dependencies]
+common-test-util.workspace = true
+mito2 = { workspace = true, features = ["test"] }
