feat: decrease the `page size` if the response message size exceeds the limit

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -10,6 +10,7 @@ testing = []
 [dependencies]
 api = { workspace = true }
 arrow-flight.workspace = true
+async-recursion = "1.0"
 async-stream.workspace = true
 async-trait.workspace = true
 base64 = "0.21"
@@ -38,6 +39,7 @@ store-api = { workspace = true }
 strum.workspace = true
 table = { workspace = true }
 tokio.workspace = true
+tonic.workspace = true
 
 [dev-dependencies]
 chrono.workspace = true
