--- a/src/common/decimal/Cargo.toml
+++ b/src/common/decimal/Cargo.toml
@@ -10,6 +10,6 @@ bigdecimal = { workspace = true }
 common-error = { workspace = true }
 common-macro = { workspace = true }
 rust_decimal = { workspace = true }
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 serde_json = "1.0"
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
