--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -16,8 +16,10 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
+lazy_static = "1.4"
 mito2.workspace = true
 object-store.workspace = true
+prometheus.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
 store-api.workspace = true
