--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -43,7 +43,6 @@ sync_write = false
 [storage]
 # The working home directory.
 data_home = "/tmp/greptimedb/"
-type = "File"
 # TTL for all tables. Disabled by default.
 # global_ttl = "7d"
 
@@ -52,6 +51,9 @@ type = "File"
 # cache_path = "/path/local_cache"
 # The local file cache capacity in bytes.
 # cache_capacity = "256MB"
+
+[storage.default_store]
+type = "File"
 
 # Mito engine options
 [[region_engine]]
