--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -105,6 +105,9 @@ global_write_buffer_reject_size = "2GB"
 sst_meta_cache_size = "128MB"
 # Cache size for vectors and arrow arrays (default 512MB). Setting it to 0 to disable the cache.
 vector_cache_size = "512MB"
+# Buffer size for SST writing.
+sst_write_buffer_size = "8MB"
+
 
 # Log options
 # [logging]
